tests/checker/bad/bad_adt_lib_3.scilla
scilla_version 0

import BadADTLib3a BadADTLib3b

(***************************************************)
(*               Associated library                *)
(***************************************************)

contract BadLib ()
